instructor-dashboard/tenant/instructor-dashboard/templates/grafana/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app.kubernetes.io/name: grafana-deployment
    app.kubernetes.io/component: grafana
    app.kubernetes.io/part-of: instructor-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
        app.kubernetes.io/component: grafana
        app.kubernetes.io/part-of: instructor-dashboard
    spec:
      containers:
      - name: grafana
        image: grafana/grafana-enterprise
        resources:
          limits:
            memory: 256Mi
            cpu: 500m
        ports:
          - name: port-3000
            containerPort: 3000
        volumeMounts:
          - name: datasource-config
            mountPath: /etc/grafana/provisioning/datasources
            readOnly: true
          - name: dashboards-config
            mountPath: /etc/grafana/provisioning/dashboards
            readOnly: true
          - name: dashboards
            mountPath: /var/lib/grafana/dashboards
      volumes:
      - name: datasource-config
        configMap:
          name: datasource-config
      - name: dashboards-config
        configMap:
          name: dashboards-config
      - name: dashboards
        configMap:
          name: dashboards
