instructor-dashboard/tenant/instructor-dashboard/templates/grafana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana-service
    app.kubernetes.io/component: grafana
    app.kubernetes.io/part-of: instructor-dashboard
spec:
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: webui
