instructor-dashboard/tenant/instructor-dashboard/templates/grafana/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana-route
    app.kubernetes.io/component: grafana
    app.kubernetes.io/part-of: instructor-dashboard
spec:
  to:
    kind: Service
    name: grafana
  port:
    targetPort: webui
  tls:
    termination: edge
